# gui-frameworks

./: LICENSE  README.md
.github/workflows/: deploy.yml
BoleroApp/: .gitignore  BoleroApp.sln  Directory.Build.props  README.md  deno.json  setup-env.ts  thoughts.md
BoleroApp/src/BoleroApp.Client/: BoleroApp.Client.fsproj  File.fs  Main.fs  Program.fs  Quiz.fs  Startup.fs  Theme.fs  Title.fs  Util.fs
BoleroApp/src/BoleroApp.Client/Main/: Main.fs  (+1 more)
FalcoApp/: .gitignore  Base.fs  CreateQuiz.fs  FalcoApp.fsproj  Main.fs  Program.fs  README.md
elm/: README.md  deno.json  elm-watch.json  elm.json  index.html  setup-env.ts  thoughts.md
elm/src/: Environment.elm  Main.elm  NotFound.elm  Quotes.elm  Routes.elm
elm/src/Util/: Date.elm  Months.elm  Ports.elm
elm/style/: styles.css
iced/: Cargo.toml  README.md  index.html  thoughts.md
iced/src/: main.rs  number_pane.rs
iced/src/equation/: medium.rs  mod.rs  simple.rs
svelte/: README.md  package-lock.json  package.json  svelte.config.js  thoughts.md
svelte/src/: app.html
svelte/src-tauri/: tauri.conf.json
svelte/src-tauri/src/: lib.rs
svelte/src/lib/: menu.svelte  scroll.svelte.ts  scrollCamera.svelte
svelte/src/routes/: +page.svelte
svelte/static/style/: common.css
tauri_svelte/: package-lock.json  package.json
tauri_svelte/raw_files/: page.blend  page.blend1
tauri_svelte/src-tauri/: Cargo.toml
tauri_svelte/src/lib/: App.svelte  Scene.svelte  menu.svelte  scrollCamera.svelte  useGltfAnimations.ts
tauri_svelte/src/routes/: +layout.svelte  +page.svelte
tauri_svelte/static/: page.glb
(+20 files in other folders)
