[package]
name = "iced"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13", features = [ "advanced", "tokio", "webgl", "fira-sans" ] }
iced_core = "0.13"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9"
wasm-timer = "0.2.5"
parking_lot = { version = "0.11.1", features = ["wasm-bindgen"]}
